<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context=".ui.OfficersActivity">

	<com.babestudios.base.view.ParallaxAppBarView
		android:id="@+id/pabOfficerDetails"
		android:layout_width="match_parent"
		android:layout_height="@dimen/appBarHeight"
		android:theme="@style/AppTheme.AppBarOverlay"
		app:imageViewSrc="@drawable/bg_officers" />

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="?attr/actionBarSize"
			android:divider="@color/translucentBlack"
			android:orientation="vertical"
			android:showDividers="middle|end">

			<com.babestudios.companyinfouk.core.views.TwoLineView
				android:id="@+id/twoLineOfficerDetailsName"
				style="@style/TwoLine"
				app:textFirst="@string/officer_details_name"
				tools:textSecond="PATEL, Ashish Nalin" />

			<com.babestudios.companyinfouk.core.views.TwoLineView
				android:id="@+id/twoLineOfficerDetailsAppointedOn"
				style="@style/TwoLine"
				app:textFirst="@string/officer_details_appointed_on"
				tools:textSecond="2011-08-11" />

			<com.babestudios.companyinfouk.core.views.TwoLineView
				android:id="@+id/twoLineOfficerDetailsNationality"
				style="@style/TwoLine"
				app:textFirst="@string/officer_details_nationality"
				tools:textSecond="British" />

			<com.babestudios.companyinfouk.core.views.TwoLineView
				android:id="@+id/twoLineOfficerDetailsOccupation"
				style="@style/TwoLine"
				app:textFirst="@string/officer_details_occupation"
				tools:textSecond="Director" />

			<com.babestudios.companyinfouk.core.views.TwoLineView
				android:id="@+id/twoLineOfficerDetailsDateOfBirth"
				style="@style/TwoLine"
				app:textFirst="@string/officer_details_date_of_birth"
				tools:textSecond="25/1980" />

			<com.babestudios.companyinfouk.core.views.TwoLineView
				android:id="@+id/twoLineOfficerDetailsCountryOfResidence"
				style="@style/TwoLine"
				app:textFirst="@string/officer_details_country_of_residence"
				tools:textSecond="United Kingdom" />

			<com.babestudios.companyinfouk.core.views.AddressView
				android:id="@+id/addressViewOfficerDetails"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:addressLine1="Hurst House"
				app:addressLine2="Clay Lane"
				app:country="England"
				app:locality="Redhill"
				app:postCode="RH1 4EG"
				app:region="Surrey"
				app:title="@string/insolvency_details_address" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/btnOfficerDetailsAppointments"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/screenMargin"
				android:layout_marginBottom="@dimen/viewMarginLarge"
				android:layout_marginTop="16dp"
				android:text="@string/officer_details_appointments"
				android:transitionName="transition_name_example" />

		</LinearLayout>
	</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
